Added headtracker, AudioSource (incl delay) and folders for video and audio files

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@
 *.unityproj
 *.user
 *.userprefs
+*.wav
+*.wav.meta
 *.VC.db
 /[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
 /[Aa]ssets/Plugins/Editor/JetBrains*
